# TraceMyMoneyAPI

./: .env  .env.prod  .gitignore  .test_env  Dockerfile  Pipfile  README.md  docker-compose.yaml  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: deploy_on_ec2.yml  deployment.yml  docker-image.yml
app/: __init__.py
app/api/: deps.py
app/core/: config.py  llm.py  security.py
app/db/: __init__.py  session.py
app/models/: __init__.py  bank.py  expense.py  expense_entry.py  expense_entry_tag.py  user.py  user_preference.py
app/schemas/: __init__.py  bank.py  common.py  entry_tag.py  expense.py  expense_entry.py  token.py  user.py  user_preference.py
app/services/: __init__.py  bank_service.py  entry_tag_service.py  expense_service.py  user_preference_service.py  user_service.py
app/utils/: date_utils.py
env/: .env  .env.prod  .test_env
nginx/: Dockerfile  nginx.conf
scripts/: seed_data.py  update_route-53_dns.txt
src/: base.py  config.py  constants.py  database.py  extensions.py  main.py
src/auth_resource/: views.py
src/blueprints/: auth.py  banks.py  expense_entry_tags.py  expenses.py  user_preferences.py
src/celery/: async_task.py
src/common/: base_resource.py
src/common_constants/: pub_sub_constants.py  tasks_constants.py
src/helpers/: authentication.py  helper.py
src/models/: bank.py  expense.py  expense_entry.py  expense_entry_tag.py  user.py  user_preference.py
src_restful/: base.py  constants.py  extensions.py  main.py  restful_app.py
tests/: conftest.py  constants.py
(+86 files in other folders)
