[project]
name = "stalk-my-money"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi>=0.135.3",
    "langchain-core>=1.2.28",
    "langchain-groq>=1.1.2",
    "motor>=3.7.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "python-jose>=3.5.0",
    "uvicorn>=0.44.0",
]
